[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "click-completion-cmd"
version = "0.0.0"
description = "Add a completion subcommand to Click CLI utilities to generate shell completion scripts."
authors = [
    { name = "Sébastien De Revière", email = "contact@sderev.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
keywords = ["click", "shell", "completion", "bash", "zsh", "fish", "cli"]

[project.urls]
Homepage = "https://github.com/sderev/click-completion-cmd"
Repository = "https://github.com/sderev/click-completion-cmd"
Issues = "https://github.com/sderev/click-completion-cmd/issues"
